--- a/index.html
+++ b/index.html
@@ -8,30 +8,66 @@
   body {
     margin:0;
     padding:0;
-    background:#000;
-    color:#fff;
     font-family: Arial, sans-serif;
-    text-align:center;
+    overflow: hidden;
+    text-align: center;
+    color: #fff;
+    animation: gradientBG 10s ease infinite;
+    background: linear-gradient(-45deg, #ff66aa, #ff0077, #ff99cc, #ff33aa);
+    background-size: 400% 400%;
   }
+
+  @keyframes gradientBG {
+    0% {background-position:0% 50%;}
+    50% {background-position:100% 50%;}
+    100% {background-position:0% 50%;}
+  }
+
   h1 {
-    font-size:3em;
+    font-size: 3em;
     margin-top:50px;
-    color:#ff66aa;
+    text-shadow: 0 0 20px #fff;
   }
+
   button {
-    font-size:2em;
-    margin:20px;
-    padding:15px 40px;
-    border:none;
-    border-radius:10px;
-    cursor:pointer;
+    font-size: 2em;
+    padding: 15px 40px;
+    margin: 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.2s;
+  }
+
+  #yesBtn {
     background:#ff0077;
     color:#fff;
-    transition:0.3s;
   }
-  button:hover { transform:scale(1.1); }
-  #yesScreen { display:none; margin-top:50px; }
-  #yesScreen img { width:300px; margin-top:20px; border-radius:10px; }
+
+  #noBtn {
+    background:#222;
+    color:#fff;
+  }
+
+  #yesScreen {
+    display: none;
+    margin-top: 50px;
+  }
+
+  #yesScreen img {
+    width: 300px;
+    margin-top: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px #ff66aa;
+    animation: float 3s ease-in-out infinite;
+  }
+
+  @keyframes float {
+    0% { transform: translateY(0px);}
+    50% { transform: translateY(-15px);}
+    100% { transform: translateY(0px);}
+  }
 </style>
 </head>
 <body>
@@ -42,7 +78,7 @@
 
 <div id="yesScreen">
   <h1>Correct choice Ms Valentine 💖</h1>
-  <img src="https://cdn.pixabay.com/photo/2017/02/14/03/40/cat-2068462_1280.jpg" alt="Cat with Rose">
+  <img src="https://tenor.com/bP6fMZYXjv0.gif" alt="Cat with Rose">
 </div>
 
 <script>
@@ -58,8 +94,13 @@
     yesScreen.style.display = 'block';
   }
 
-  noBtn.onclick = () => {
-    alert("You must choose YES 😗");
+  // Make NO button run away
+  noBtn.onmouseover = () => {
+    const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+    const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+    noBtn.style.position = 'absolute';
+    noBtn.style.left = x + 'px';
+    noBtn.style.top = y + 'px';
   }
 </script>
 
