--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <div id="yesScreen">
   <h1>Correct choice Ms Valentine 💖</h1>
-  <img src="https://tenor.com/bP6fMZYXjv0.gif" alt="Cat with Rose">
+  <img src="IMG_3301.gif" alt="My GIF">
 </div>
 
 <script>
