--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 </head>
 <body>
 
-<h1 id="mainTitle">My Valentine</h1>
+<h1 id="mainTitle">Will you be my Valentine ? </h1>
 <button id="yesBtn">YES</button>
 <button id="noBtn">NO</button>
 
 <div id="yesScreen">
-  <h1>Correct choice Ms Valentine 💖</h1>
-  <img src="IMG_3301.gif" alt="My GIF">
+  <h1> Thank you for picking the correct choice ! Here is a flower for Ms Valentine </h1>
+  <img src="IMG_3299.jpeg" alt="My pic">
 </div>
 
 <script>
